[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/PressurePlate.gd" type="Script" id=1]
[ext_resource path="res://Sprites/PressurePlates/pressure-plate-up.png" type="Texture" id=2]
[ext_resource path="res://Sprites/PressurePlates/pressure-plate-down.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.078, 13.1748 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "up",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "down",
"speed": 5.0
} ]

[node name="PressurePlate" type="Node2D"]
position = Vector2( 130, 136 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "up"
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
